crates/au-cli/tests/it/snapshots/it__scenarios__embedded-record-validation-failure.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "embedded-record-validation-failure",
      "message": "embedded record (`type: assumption`) fails its type's contract — required field(s) absent: 'description'",
      "related": [
        {
          "file": "<root>/scenarios/embedded-record-validation-failure/type/assumption.type.yaml",
          "line_col": {
            "end": {
              "col": 14,
              "line": 2
            },
            "start": {
              "col": 3,
              "line": 2
            }
          },
          "range": {
            "end": 21,
            "start": 10
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/embedded-record-validation-failure/decision.md",
        "line_col": {
          "end": {
            "col": 1,
            "line": 13
          },
          "start": {
            "col": 1,
            "line": 9
          }
        },
        "range": {
          "end": 153,
          "start": 92
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 40,
                        "line_col": {
                          "end": {
                            "col": 41,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/embedded-record-validation-failure/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "embedded-record-validation-failure"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "embedded-record-validation-failure"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/embedded-record-validation-failure/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 91,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 77
            },
            "text": "Assumptions"
          },
          {
            "body": "type: assumption\nconfidence: high\n",
            "info": "yaml [:assumptions]",
            "kind": "fenced_block",
            "span": {
              "end": 153,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 13
                },
                "start": {
                  "col": 1,
                  "line": 9
                }
              },
              "start": 92
            }
          },
          {
            "content": "description",
            "kind": "inline_code",
            "span": {
              "end": 189,
              "line_col": {
                "end": {
                  "col": 36,
                  "line": 14
                },
                "start": {
                  "col": 23,
                  "line": 14
                }
              },
              "start": 176
            }
          },
          {
            "content": "assumption",
            "kind": "inline_code",
            "span": {
              "end": 209,
              "line_col": {
                "end": {
                  "col": 56,
                  "line": 14
                },
                "start": {
                  "col": 44,
                  "line": 14
                }
              },
              "start": 197
            }
          }
        ],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "assumptions",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/embedded-record-validation-failure/type/decision.type.yaml",
                "required": false,
                "shape": "assumption&[]"
              }
            ],
            "required": false,
            "shape": "assumption&[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/embedded-record-validation-failure/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 153,
                        "line_col": {
                          "end": {
                            "col": 1,
                            "line": 13
                          },
                          "start": {
                            "col": 1,
                            "line": 9
                          }
                        },
                        "start": 92
                      },
                      "file": "<root>/scenarios/embedded-record-validation-failure/decision.md"
                    },
                    "section_path": [
                      {
                        "index": 1,
                        "text": "Assumptions"
                      }
                    ],
                    "surface": "body_fence",
                    "value": {
                      "fields": [
                        {
                          "field": "confidence",
                          "values": [
                            {
                              "kind": "scalar",
                              "value": "high"
                            }
                          ]
                        }
                      ],
                      "kind": "inline_record"
                    }
                  }
                ],
                "value": {
                  "fields": [
                    {
                      "field": "confidence",
                      "values": [
                        {
                          "kind": "scalar",
                          "value": "high"
                        }
                      ]
                    }
                  ],
                  "kind": "inline_record"
                }
              }
            ],
            "field": "assumptions"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 58,
                        "line_col": {
                          "end": {
                            "col": 40,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/embedded-record-validation-failure/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate dev DB to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate dev DB to SQLite"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/embedded-record-validation-failure/decision.md",
        "section_presence": null
      }
    ]
  }
}
