crates/au-cli/tests/it/snapshots/it__scenarios__engine-namespace-reserved.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "engine-name-live-shadow",
      "message": "type-def 'au.engine.repo' shares a name with a hardwired engine type; both coexist as distinct identities, 'au.engine.repo::au-engine' names the engine's",
      "severity": "warning",
      "span": {
        "file": "<root>/scenarios/engine-namespace-reserved/type/au.engine.repo.type.yaml",
        "line_col": {
          "end": {
            "col": 1,
            "line": 6
          },
          "start": {
            "col": 1,
            "line": 4
          }
        },
        "range": {
          "end": 243,
          "start": 223
        }
      }
    },
    {
      "code": "engine-name-shadow-drift",
      "message": "type-def 'au.engine.repo' shadows a hardwired engine type and has DIVERGED from it; the engine's copy is 'au.engine.repo::au-engine'",
      "severity": "drift",
      "span": {
        "file": "<root>/scenarios/engine-namespace-reserved/type/au.engine.repo.type.yaml",
        "line_col": {
          "end": {
            "col": 1,
            "line": 6
          },
          "start": {
            "col": 1,
            "line": 4
          }
        },
        "range": {
          "end": 243,
          "start": 223
        }
      }
    },
    {
      "code": "engine-name-forward-reserved",
      "message": "type-def 'au.engine.widget' is in the engine-reserved 'au.engine.*' namespace, which the engine may hardwire in a future version",
      "severity": "hint",
      "span": {
        "file": "<root>/scenarios/engine-namespace-reserved/type/au.engine.widget.type.yaml",
        "line_col": {
          "end": {
            "col": 1,
            "line": 6
          },
          "start": {
            "col": 1,
            "line": 4
          }
        },
        "range": {
          "end": 231,
          "start": 211
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 1,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 31,
                        "line_col": {
                          "end": {
                            "col": 32,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/engine-namespace-reserved/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "engine-namespace-reserved"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "engine-namespace-reserved"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/engine-namespace-reserved/.arsumbris/repo.yaml",
        "section_presence": null
      }
    ]
  }
}
