crates/au-cli/tests/it/snapshots/it__scenarios__engine-schema-type-floor-omitted.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "engine-schema-type-floor-omitted",
      "fix": {
        "description": "include `au.engine.repo::au-engine` in the `type:` claim; mixing in more is fine"
      },
      "message": "engine-schema file writes a `type:` whose closure omits the kind's floor `au.engine.repo::au-engine`; the written claim names the wrong kind",
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/engine-schema-type-floor-omitted/.arsumbris/repo.yaml",
        "line_col": {
          "end": {
            "col": 37,
            "line": 2
          },
          "start": {
            "col": 7,
            "line": 2
          }
        },
        "range": {
          "end": 75,
          "start": 45
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 1,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.workspace::au-engine"
        ],
        "closure": [
          "au.engine.workspace::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "disabled",
            "origins": [
              {
                "name": "au.engine.workspace",
                "origin_path": "<au-engine-builtin>/au.engine.workspace.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String[]"
              }
            ],
            "required": false,
            "shape": "String[]"
          },
          {
            "divergent": false,
            "field": "discover",
            "origins": [
              {
                "name": "au.engine.workspace",
                "origin_path": "<au-engine-builtin>/au.engine.workspace.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String[]"
              }
            ],
            "required": false,
            "shape": "String[]"
          },
          {
            "divergent": false,
            "field": "edit",
            "origins": [
              {
                "name": "au.engine.workspace",
                "origin_path": "<au-engine-builtin>/au.engine.workspace.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String[]"
              }
            ],
            "required": false,
            "shape": "String[]"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 38,
                        "line_col": {
                          "end": {
                            "col": 39,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/engine-schema-type-floor-omitted/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "engine-schema-type-floor-omitted"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "engine-schema-type-floor-omitted"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/engine-schema-type-floor-omitted/.arsumbris/repo.yaml",
        "section_presence": null
      }
    ]
  }
}
